# HeimdallSort

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: download-ffmpeg.cjs  extract-changelog.mjs
src/: app.ts  main.ts
src-tauri/: Cargo.toml  output.txt  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src-tauri/src/commands/: folder.rs  mod.rs
src-tauri/src/services/: cache.rs  hashing.rs  metadata.rs  mod.rs  scanner.rs  sidecar.rs  sorter.rs  thumbnail.rs
src/modules/: comparison.ts  duplicates.ts  gallery.ts  state.ts  toast.ts  types.ts  ui.ts  virtual-scroll.ts
src/styles/: main.css
src/styles/base/: base.css
src/styles/components/: buttons.css
src/styles/modules/: comparison.css  duplicates.css  gallery.css
